# lj-test

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
src/: extension.cpp
src/metatensor_lj_test/: __init__.py  extension.py  pure.py
src/metatomic_lj_test/: __init__.py  extension.py  pure.py
