[project]
name = "metatensor-lj-test"
description = "Package for testing metatensor model integration"
dynamic = ["version"]
dependencies = [
    "torch >=1.12",
    "metatensor-torch >=0.6.0,<0.7.0"
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "cmake",
    "setuptools",
    "setuptools-scm",
    "torch >=1.12"
]


[tool.setuptools_scm]
